Added support for preloads and preload fragments

--- a/LocoSwap/MainWindow.xaml
+++ b/LocoSwap/MainWindow.xaml
@@ -79,7 +79,9 @@
         </ListView>
         <Button Content="{x:Static lang:Resources.edit_scenario}" HorizontalAlignment="Left" Margin="10,0,0,10.111" Width="145" Click="Button_Click" VerticalAlignment="Bottom"/>
         <Button Content="{x:Static lang:Resources.open_scenario_directory}" HorizontalAlignment="Left" Margin="160,0,0,10.111"  Width="172"  Click="Button_Click_1" VerticalAlignment="Bottom"/>
+        <Button Name="ClearCacheBtn" Content="{x:Static lang:Resources.clear_ts_cache}" HorizontalAlignment="Left" Margin="337,0,0,10"  Width="172"  Click="Button_Click_2" VerticalAlignment="Bottom"/>
         <Button x:Name="SettingsButton" Content="{x:Static lang:Resources.settings}" Margin="658,0,10,10" VerticalAlignment="Bottom" Click="SettingsButton_Click"/>
+        <ProgressBar Visibility="Visible" Value="{Binding LoadingProgress}" x:Name="LoadingProgressBar" HorizontalAlignment="Left" Height="20" Margin="514,0,0,10" VerticalAlignment="Bottom" Width="139"/>
 
     </Grid>
 </Window>
